# CMake

./: .gitignore
RGO_Anter_Tutorial/: main.cpp
RGO_Anter_Tutorial/DivLib/: div.h
RGO_Anter_Tutorial/MulLib/: mul.cpp
RGO_Anter_Tutorial/MyMath/: add.cpp
RGO_Anter_Tutorial/MyMath/add/: add.cpp
RGO_Anter_Tutorial/SubLib/: sub.h
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_First_Step/: CMakeLists.txt  main.cpp
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_First_Step/AddLib/: add.h
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_First_Step/DivLib/: CMakeLists.txt  div.cpp
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_First_Step/MyMathLib/: CMakeLists.txt
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_First_Step/SubLib/: CMakeLists.txt
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_Second_Step/: CMakeLists.txt  main.cpp
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_Second_Step/MyMathLib/: CMakeLists.txt  MyMath.h
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_Second_Step/MyMathLib/AddLib/: CMakeLists.txt
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_Second_Step/MyMathLib/MulLib/: CMakeLists.txt  mul.h
RGo_Anter_Cmake_Tutorial_Task/RGo_Anter_Cmake_Tutorial_Task_Second_Step/MyMathLib/SubLib/: sub.cpp
cmake-3.23.2-tutorial-source/Step1/: tutorial.cxx
cmake-3.23.2-tutorial-source/Step1_build/: CMakeCache.txt
cmake-3.23.2-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
cmake-3.23.2-tutorial-source/Step2_build/: CMakeCache.txt
cmake-3.23.2-tutorial-source/Step2_build/MathFunctions/MathFunctions.dir/Debug/: MathFunctions.vcxproj.FileListAbsolute.txt
cmake-3.23.2-tutorial-source/Step3/: CMakeLists.txt
cmake-3.23.2-tutorial-source/Step3/MathFunctions/: CMakeLists.txt
cmake-3.23.2-tutorial-source/Step3_build/: CMakeCache.txt
cmake-3.23.2-tutorial-source/Step3_build/MathFunctions/MathFunctions.dir/Debug/: MathFunctions.vcxproj.FileListAbsolute.txt
cmake-3.23.2-tutorial-source/Step4/: CMakeLists.txt
cmake-3.23.2-tutorial-source/Step4/step4_build/: CMakeCache.txt  install_manifest.txt
cmake-3.23.2-tutorial-source/Step4/step4_build/MathFunctions/MathFunctions.dir/Debug/: MathFunctions.vcxproj.FileListAbsolute.txt
cmake-3.23.2-tutorial-source/Step4/step4_build/Testing/Temporary/: CTestCostData.txt
cmake-3.23.2-tutorial-source/Step5/MathFunctions/: mysqrt.cxx
